--- a/Colloquium/index.html
+++ b/Colloquium/index.html
@@ -141,7 +141,7 @@
           <tr>
             <td>04/09/2021</td>
             <td>Dr. Elizabeth McCullagh</td>
-            <td>TBA</td>
+            <td>Computational tools used in auditory neuroscience</td>
             <td>TBA</td>
           </tr>
           <tr>
