--- a/Colloquium/index.html
+++ b/Colloquium/index.html
@@ -152,8 +152,8 @@
           </tr>
           <tr>
             <td>04/23/2021</td>
-            <td>TBA</td>
-            <td>TBA</td>
+            <td>Dr. Fillipe de Souza</td>
+            <td>Privacy-Preserving Computing with Homomorphic Encryption</td>
             <td>TBA</td>
           </tr>
           <tr>
