--- a/group.html
+++ b/group.html
@@ -63,7 +63,7 @@
   <div class="person">
     <img src="./files/Sanjoy1.png" alt="thumb" />
     <p>
-      <a href="#">Sanjoy Kundu</a>
+      <a href="https://sanjoykundu.github.io/">Sanjoy Kundu</a>
       <br />
       Ph.D. Student <br/>
       (Spring 2020 - Present)
