--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+  <dt>Spring'21</dt>
+  <dd>
+    One paper on using Adversarial Co-Training for Sim2Real transfer in Metagenome analysis has been accepted at PAKDD 2021! Congrats Vineela and Vennela! More details to follow.
+  </dd>
   <dt>Fall'20</dt>
   <dd>
     Invited as reviewer for CVPR 2021, ICML 2021, CRV 2021, ICCV 2021.
