--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Spring'21</dt>
   <dd>
-    One paper on using Adversarial Co-Training for Sim2Real transfer in Metagenome analysis has been accepted at PAKDD 2021! Congrats Vineela and Vennela! More details to follow.
+    One paper on using Adversarial Co-Training for Sim2Real transfer in Metagenome analysis has been accepted at PAKDD 2021! Congrats <a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela</a> and <a href="https://www.linkedin.com/in/vennela-indla-a00604130/">Vennela</a>! More details to follow.
   </dd>
   <dt>Fall'20</dt>
   <dd>
