--- a/group.html
+++ b/group.html
@@ -93,7 +93,7 @@
   <div class="person">
     <img src="./files/blank_w.jpg" alt="thumb" />
     <p>
-      <a href="#">Vineela Indla</a>
+      <a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>
       <br />
       M.S. (CS) Student <br/>
       (Fall 2020 - Present)
