--- a/pubs.html
+++ b/pubs.html
@@ -53,7 +53,12 @@
 <section>
 	<h2 style="text-align: center">2021</h2>
 	<ul>
-	
+		<li>
+		 <a href="#">Sim2Real for Metagenomes: Accelerating Animal Diagnostics with Adversarial Co-Training
+		</a>.<br>
+		 Vineela Indla, Vennela Indla, Sai Narayanan, Akhilesh Ramachandran, Arunkumar Bagavathi, Vishalini Laguduva Ramnath, Sathyanarayanan N. Aakur <br>
+			 Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD-2021) <a href="#">[Preprint coming soon!]</a><br>
+		 </li>
 		 <li>
 		 <a href="https://arxiv.org/abs/2001.11580">Unsupervised Gaze Prediction in Egocentric Videos by Energy-based Surprise Modeling
 		</a>.<br>
