--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Spring'21</dt>
   <dd>
+    I will be an Area Chair for ACM Multimedia 2021!
+  </dd>
+  <dt>Spring'21</dt>
+  <dd>
     One paper on using Adversarial Co-Training for Sim2Real transfer in Metagenome analysis has been accepted at PAKDD 2021! Congrats <a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela</a> and <a href="https://www.linkedin.com/in/vennela-indla-a00604130/">Vennela</a>! Preprint coming soon!
   </dd>
   <dt>Fall'20</dt>
