--- a/pubs.html
+++ b/pubs.html
@@ -54,6 +54,12 @@
 	<h2 style="text-align: center">2021</h2>
 	<ul>
 		<li>
+			<a href="#">LexDivPara: A measure of paraphrase quality with integrated sentential lexical complexity.
+			</a>.<br>
+			Thanh Thieu, Ha Do, Thanh Duong, Shi Pu, \textbf{Sathyanarayanan N. Aakur}, Saad Khan.  <br>
+			Intelligent Systems Conference (IntelliSys) 2021}. <a href="#">[Preprint coming soon!]</a><br>
+		</li>
+		<li>
 		 <a href="#">Sim2Real for Metagenomes: Accelerating Animal Diagnostics with Adversarial Co-Training
 		</a>.<br>
 		 Vineela Indla, Vennela Indla, Sai Narayanan, Akhilesh Ramachandran, Arunkumar Bagavathi, Vishalini Laguduva Ramnath, Sathyanarayanan N. Aakur <br>
