--- a/pubs.html
+++ b/pubs.html
@@ -56,7 +56,7 @@
 		<li>
 			<a href="#">LexDivPara: A measure of paraphrase quality with integrated sentential lexical complexity.
 			</a>.<br>
-			Thanh Thieu, Ha Do, Thanh Duong, Shi Pu, \textbf{Sathyanarayanan N. Aakur}, Saad Khan.  <br>
+			Thanh Thieu, Ha Do, Thanh Duong, Shi Pu, Sathyanarayanan N. Aakur, Saad Khan.  <br>
 			Intelligent Systems Conference (IntelliSys) 2021}. <a href="#">[Preprint coming soon!]</a><br>
 		</li>
 		<li>
