--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Spring'21</dt>
   <dd>
+    I will be an Area Chair for <a href="http://cvpr2022.thecvf.com/">CVPR 2022</a> in New Orleans!!
+  </dd>
+  <dd>
     I will be an Area Chair for <a href="https://2021.acmmm.org/">ACM Multimedia 2021</a>!
   </dd>
   <dt>Spring'21</dt>
