--- a/pubs.html
+++ b/pubs.html
@@ -31,6 +31,12 @@
 <section>
 <h2 style="text-align: center">Latest Preprints</h2>
 <ul>
+<li>
+ <a href="#">Learning Actor-centered Representations for Action Localization in Streaming Videos using Predictive Learning</a>.<br>
+ Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
+ arXiv, 2021. <br>
+ 	
+ </li>
  <li>
  <a href="https://arxiv.org/abs/2009.07470">Knowledge Guided Learning: Towards Open Domain Egocentric Action Recognition with Zero Supervision</a>.<br>
  Sathyanarayanan N. Aakur, Sanjoy Kundu, Nikhil Gunti <br>
