--- a/pubs.html
+++ b/pubs.html
@@ -32,9 +32,9 @@
 <h2 style="text-align: center">Latest Preprints</h2>
 <ul>
 <li>
- <a href="#">Learning Actor-centered Representations for Action Localization in Streaming Videos using Predictive Learning</a>.<br>
+ <a href="https://arxiv.org/abs/2104.14131">Learning Actor-centered Representations for Action Localization in Streaming Videos using Predictive Learning</a>.<br>
  Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
- arXiv, 2021. <br>
+ arXiv:2104.14131, 2021. <br>
  	
  </li>
  <li>
