--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+  <dt>Summer'21</dt>
+  <dd>
+	  One paper on <i>Leveraging Pseudo-Imaging for Multi-Modal Metagenome Analysis</i> has been accepted at <a href="https://www.miccai2021.org/en/default.asp">MICCAI 2021</a>!
+  </dd>	
   <dt>Spring'21</dt>
   <dd>
     I will be an Area Chair for <a href="http://cvpr2022.thecvf.com/">CVPR 2022</a> in New Orleans!!
