--- a/pubs.html
+++ b/pubs.html
@@ -60,6 +60,13 @@
 	<h2 style="text-align: center">2021</h2>
 	<ul>
 		<li>
+		 <a href="#">MG-NET: Leveraging Pseudo-Imaging for Multi-Modal Metagenome Analysis
+		</a>.<br>
+		 Sathyanarayanan N. Aakur, Vineela Indla, Arunkumar Bagavathi, Sai Narayanan, Akhilesh Ramachandran, Vishalini Laguduva Ramnath <br>
+			 International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI-2021) <a href="#">[Preprint coming soon!]</a><br>
+		 </li>
+
+		<li>
 			<a href="#">LexDivPara: A measure of paraphrase quality with integrated sentential lexical complexity.
 			</a>.<br>
 			Thanh Thieu, Ha Do, Thanh Duong, Shi Pu, Sathyanarayanan N. Aakur, Saad Khan.  <br>
