--- a/index.html
+++ b/index.html
@@ -222,11 +222,14 @@ I lead the <a href="group.html">Computer Vision and Understanding Lab</a>. Here 
  <li class="packed"><a href="https://sanjoykundu.github.io/">Sanjoy Kundu</a>, PhD student (Spring 2020 &mdash; Present)</li> 
  <li class="packed"><a href="#">Shubham Trehan</a>, PhD student (Fall 2020 &mdash; Present)</li> 
  <li class="packed"><a href="#">Priyadharsini Ramamurthy</a>, PhD student (Fall 2020 &mdash; Present)</li>
- <li class="packed"><a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>, MS student (Fall 2019 &mdash; Present)</li> 
  <li class="packed"><a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>, M.S. student (Fall 2020 &mdash; Present)</li>
  <li class="packed"><a href="#">Makenzie Terrell</a>, B.S. student (Fall 2020 &mdash; Present)</li>
  </ul>
 
+	<h4>Past Students</h4>
+<ul>
+ <li class="packed"><a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>, MS student (Fall 2019 &mdash; Spring 2021). First Job: Data Scientst, Concat Systems</li> 
+ </ul>
 
 <!-- Funding -->
 <section>
