--- a/group.html
+++ b/group.html
@@ -51,16 +51,6 @@
   </div>
 
   <div class="person">
-    <img src="./files/nikhil.jpg" alt="thumb" />
-    <p>
-      <a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>
-      <br />
-      Master's Student (BA&DS) <br/>
-      (Fall 2019 - Present)
-    </p>
-  </div>
-
-  <div class="person">
     <img src="./files/Sanjoy1.png" alt="thumb" />
     <p>
       <a href="https://sanjoykundu.github.io/">Sanjoy Kundu</a>
@@ -119,6 +109,25 @@
   </div>  
 </div>
 
+</section>
+
+<section>
+  <center>
+<h1 id="people">Alumni</h1>
+</center>
+<br>
+<div class="people">
+  <div class="person">
+    <img src="./files/nikhil.jpg" alt="thumb" />
+    <p>
+      <a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>
+      <br />
+      Master's Student (BA&DS) <br/>
+      (Fall 2019 - Spring 2021) <br/>
+      First Job: Data Scientist, Concat Systems.
+    </p>
+  </div>
+</div>
 </section>
 
 <section>
