--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
-  <dt>Fall'12</dt>
+  <!-- <dt>Fall'12</dt>
   <dd>
     Invited as Associate Editor for <a href="https://www.ieee-ras.org/publications/ra-l">IEEE RA-L!</a>
-  </dd>
+  </dd> -->
   <dt>Summer'21</dt>
   <dd>
 	  One paper on <i>Leveraging Pseudo-Imaging for Multi-Modal Metagenome Analysis</i> has been accepted at <a href="https://www.miccai2021.org/en/default.asp">MICCAI 2021</a>!
