--- a/pubs.html
+++ b/pubs.html
@@ -63,20 +63,20 @@
 		 <a href="#">MG-NET: Leveraging Pseudo-Imaging for Multi-Modal Metagenome Analysis
 		</a>.<br>
 		 Sathyanarayanan N. Aakur, Vineela Indla, Arunkumar Bagavathi, Sai Narayanan, Akhilesh Ramachandran, Vishalini Laguduva Ramnath <br>
-			 International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI-2021) <a href="#">[Preprint coming soon!]</a><br>
+			 International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI-2021) <a href="https://arxiv.org/abs/2107.09883">[Preprint]</a><br>
 		 </li>
 
 		<li>
 			<a href="#">LexDivPara: A measure of paraphrase quality with integrated sentential lexical complexity.
 			</a>.<br>
 			Thanh Thieu, Ha Do, Thanh Duong, Shi Pu, Sathyanarayanan N. Aakur, Saad Khan.  <br>
-			Intelligent Systems Conference (IntelliSys) 2021}. <a href="#">[Preprint coming soon!]</a><br>
+			Intelligent Systems Conference (IntelliSys) 2021}. <a href="https://link.springer.com/chapter/10.1007/978-3-030-82199-9_1">[pdf]</a><br>
 		</li>
 		<li>
 		 <a href="#">Sim2Real for Metagenomes: Accelerating Animal Diagnostics with Adversarial Co-Training
 		</a>.<br>
 		 Vineela Indla, Vennela Indla, Sai Narayanan, Akhilesh Ramachandran, Arunkumar Bagavathi, Vishalini Laguduva Ramnath, Sathyanarayanan N. Aakur <br>
-			 Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD-2021) <a href="#">[Preprint coming soon!]</a><br>
+			 Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD-2021) <a href="https://link.springer.com/chapter/10.1007/978-3-030-75762-5_14">[pdf]</a><br>
 		 </li>
 		 <li>
 		 <a href="https://arxiv.org/abs/2001.11580">Unsupervised Gaze Prediction in Egocentric Videos by Energy-based Surprise Modeling
@@ -92,7 +92,7 @@
 		<li>
 			 <a href="https://arxiv.org/abs/2007.12791">GRaDL: A Framework for Animal Genome Sequence Classification with Graph Representations and Deep Learning</a>.<br>
 			 Sai Narayanan, Akhilesh Ramachandran, Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
-			 International Conference on Machine Learning Applications (ICMLA'20), 2020. <br>
+			 International Conference on Machine Learning Applications (ICMLA'20), 2020. <a href="https://arxiv.org/abs/2007.12791"> [Preprint] </a> <br>
 		 </li>
 		 
 		<li>
