--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Fall'21</dt>
   <dd>
+    One paper on using transformers for metagenome analysis accepted at the ICDM 2021 Workshops! Preprint coming soon!
+  </dd>
+
+  <dt>Fall'21</dt>
+  <dd>
     Invited as Associate Editor for <a href="https://www.ieee-ras.org/publications/ra-l">IEEE RA-L!</a>
   </dd>
   <dt>Summer'21</dt>
