--- a/pubs.html
+++ b/pubs.html
@@ -60,28 +60,29 @@
 	<h2 style="text-align: center">2021</h2>
 	<ul>
 		<li>
-		 <a href="#">MG-NET: Leveraging Pseudo-Imaging for Multi-Modal Metagenome Analysis
-		</a>.<br>
-		 Sathyanarayanan N. Aakur, Vineela Indla, Arunkumar Bagavathi, Sai Narayanan, Akhilesh Ramachandran, Vishalini Laguduva Ramnath <br>
-			 International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI-2021) <a href="https://arxiv.org/abs/2107.09883">[Preprint]</a><br>
+			<a href="#">Metagenome2Vec: Building Contextualized Representations for Scalable Metagenome Analysis</a>. <br> 
+			Sathyanarayanan Aakur, Sai Narayanan, Vineela Indla, Vennela Indla, Arunkumar Bagavathi, Akhilesh Ramachandran, and Vishalini Laguduva Ramnath <br>
+			International Conference on Data Mining Workshops (ICDMW-2021) <a href="#">[Preprint coming soon!]</a>
+		<li>
+		 	<a href="https://arxiv.org/abs/2107.09883">MG-NET: Leveraging Pseudo-Imaging for Multi-Modal Metagenome Analysis</a>.<br>
+		 	Sathyanarayanan N. Aakur, Vineela Indla, Arunkumar Bagavathi, Sai Narayanan, Akhilesh Ramachandran, Vishalini Laguduva Ramnath <br>
+			International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI-2021) <a href="https://arxiv.org/abs/2107.09883">[Preprint]</a><br>
 		 </li>
 
 		<li>
-			<a href="#">LexDivPara: A measure of paraphrase quality with integrated sentential lexical complexity.
+			<a href="https://link.springer.com/chapter/10.1007/978-3-030-82199-9_1">LexDivPara: A measure of paraphrase quality with integrated sentential lexical complexity.
 			</a>.<br>
 			Thanh Thieu, Ha Do, Thanh Duong, Shi Pu, Sathyanarayanan N. Aakur, Saad Khan.  <br>
 			Intelligent Systems Conference (IntelliSys) 2021}. <a href="https://link.springer.com/chapter/10.1007/978-3-030-82199-9_1">[pdf]</a><br>
 		</li>
 		<li>
-		 <a href="#">Sim2Real for Metagenomes: Accelerating Animal Diagnostics with Adversarial Co-Training
-		</a>.<br>
-		 Vineela Indla, Vennela Indla, Sai Narayanan, Akhilesh Ramachandran, Arunkumar Bagavathi, Vishalini Laguduva Ramnath, Sathyanarayanan N. Aakur <br>
+			<a href="https://link.springer.com/chapter/10.1007/978-3-030-75762-5_14">Sim2Real for Metagenomes: Accelerating Animal Diagnostics with Adversarial Co-Training </a>.<br>
+			 Vineela Indla, Vennela Indla, Sai Narayanan, Akhilesh Ramachandran, Arunkumar Bagavathi, Vishalini Laguduva Ramnath, Sathyanarayanan N. Aakur <br>
 			 Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD-2021) <a href="https://link.springer.com/chapter/10.1007/978-3-030-75762-5_14">[pdf]</a><br>
 		 </li>
 		 <li>
-		 <a href="https://arxiv.org/abs/2001.11580">Unsupervised Gaze Prediction in Egocentric Videos by Energy-based Surprise Modeling
-		</a>.<br>
-		 Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
+		 	<a href="https://arxiv.org/abs/2001.11580">Unsupervised Gaze Prediction in Egocentric Videos by Energy-based Surprise Modeling</a>.<br>
+			 Sathyanarayanan N. Aakur, Arunkumar Bagavathi <br>
 			 International Conference on Computer Vision Theory and Applications (VISAPP), 2021. <a href="https://saakur.github.io/Projects/GazePrediction/">[Project Page]</a><br>
 		 </li>
 	</ul>
@@ -101,15 +102,15 @@
 			IEEE Workshop on Applied Imagery and Pattern Recognition, 2020<br>
 		</li>
 		<li>
-		<a href="https://arxiv.org/abs/2003.12185">Action Localization through Continual Predictive Learning</a>.<br>
-		 Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
+			<a href="https://arxiv.org/abs/2003.12185">Action Localization through Continual Predictive Learning</a>.<br>
+			 Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
 			 European Conference on Computer Vision (ECCV), 2020. Accepted, to appear. <a href="https://saakur.github.io/Projects/ActionLocalization/">[Project Page]</a><br>
 		 </li>
 
 		<li>
-		<a href="#">Dissecting Convolutional Neural Networks for Efficient Implementation on Constrained Platforms</a>.<br>
-		Vishalini R. Laguduva, Shakil Mahmud, Sathyanarayanan Aakur, Robert Karam, Srinivas Katkoori. <br>
-		IEEE International Conferenceon VLSI Design (VLSID), 2020.<br>
+			<a href="#">Dissecting Convolutional Neural Networks for Efficient Implementation on Constrained Platforms</a>.<br>
+			Vishalini R. Laguduva, Shakil Mahmud, Sathyanarayanan Aakur, Robert Karam, Srinivas Katkoori. <br>
+			IEEE International Conferenceon VLSI Design (VLSID), 2020.<br>
 		</li>
 
 	</ul>
@@ -120,39 +121,39 @@
 	<ul>
 
 		<li>
-		<a href="#">Latent Space Modeling for Cloning Encrypted PUF-based Authentication</a>.<br>
-		Vishalini R. Laguduva, Sathyanarayanan Aakur, Srinivas Katkoori<br>
-		IFIP International Internet of Things (IoT) Conference, 2019.<br>
+			<a href="#">Latent Space Modeling for Cloning Encrypted PUF-based Authentication</a>.<br>
+			Vishalini R. Laguduva, Sathyanarayanan Aakur, Srinivas Katkoori<br>
+			IFIP International Internet of Things (IoT) Conference, 2019.<br>
 		</li>
 
 		 <li>
-		 <a href="https://arxiv.org/abs/1909.07891">Machine Learning based IoT Edge Node Security Attack and Countermeasures</a>.<br>
-		 Vishalini R. Laguduva, Sheikh Ariful Islam, Sathyanarayanan Aakur, Srinivas Katkoori, Robert Karam<br>
-		 IEEE Computer Society Annual Symposium onVLSI (ISVLSI), 2019.<br>
+			 <a href="https://arxiv.org/abs/1909.07891">Machine Learning based IoT Edge Node Security Attack and Countermeasures</a>.<br>
+			 Vishalini R. Laguduva, Sheikh Ariful Islam, Sathyanarayanan Aakur, Srinivas Katkoori, Robert Karam<br>
+			 IEEE Computer Society Annual Symposium onVLSI (ISVLSI), 2019.<br>
 		 </li>
 
 		 <li>
-		 <a href="https://arxiv.org/pdf/1811.04869.pdf">A Perceptual Prediction Framework for Self Supervised Event Segmentation</a>.<br>
-		 Sathyanarayanan Aakur, Sudeep Sarkar <br>
-		 IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019.<br>
+			 <a href="https://arxiv.org/pdf/1811.04869.pdf">A Perceptual Prediction Framework for Self Supervised Event Segmentation</a>.<br>
+			 Sathyanarayanan Aakur, Sudeep Sarkar <br>
+			 IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019.<br>
 		 </li>
 
 		 <li>
-		 <a href="#">Fine-grained Action Detection in Long Surveillance Videos</a>.<br>
-		 Sathyanarayanan Aakur, Daniel Sawyer, Sudeep Sarkar<br>
-		 Workshop on Human Activity Detection in Multi-Camera, Continuous, Long-Duration Video (HADCV'19), Winter Conference on Applications of Computer Vision (WACV) 2019.<br>
+		 	<a href="#">Fine-grained Action Detection in Long Surveillance Videos</a>.<br>
+			 Sathyanarayanan Aakur, Daniel Sawyer, Sudeep Sarkar<br>
+			 Workshop on Human Activity Detection in Multi-Camera, Continuous, Long-Duration Video (HADCV'19), Winter Conference on Applications of Computer Vision (WACV) 2019.<br>
 		 </li>
 
 		 <li>
-		 <a href="https://arxiv.org/abs/1708.03725">Going Deeper with Semantics: Exploiting Semantic Contextualization for Interpretation of Human Activity in Videos</a>.<br>
-		 Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
-		 IEEE Winter Conference on Applications of Computer Vision (WACV), 2019.<br>
+			 <a href="https://arxiv.org/abs/1708.03725">Going Deeper with Semantics: Exploiting Semantic Contextualization for Interpretation of Human Activity in Videos</a>.<br>
+			 Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
+			 IEEE Winter Conference on Applications of Computer Vision (WACV), 2019.<br>
 		 </li>
 
 		 <li>
-		 <a href="https://saakur.github.io/files/Saakur_QAM.pdf">Generating Open World Descriptions of Video using Commonsense Knowledge in a Pattern Theory Framework</a>.<br>
-		 Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
-		 Quarterly of Applied Mathematics, 2019.<br>
+			 <a href="https://saakur.github.io/files/Saakur_QAM.pdf">Generating Open World Descriptions of Video using Commonsense Knowledge in a Pattern Theory Framework</a>.<br>
+			 Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
+			 Quarterly of Applied Mathematics, 2019.<br>
 		 </li>
 		</ul>
 	</section>
@@ -162,21 +163,21 @@
 	<ul>
 
 		 <li>
-		 <a href="#">Using semantic relationships among objects for geospatial land use classification</a>.<br>
-		 Gilbert Rotich*, Sathyanarayanan Aakur*, Rodrigo Minetto, Mauricio Segundo, Sudeep Sarkar<br>
-		 IEEE Workshop on Applied Imagery and Pattern Recognition, 2018<br>
+			 <a href="#">Using semantic relationships among objects for geospatial land use classification</a>.<br>
+			 Gilbert Rotich*, Sathyanarayanan Aakur*, Rodrigo Minetto, Mauricio Segundo, Sudeep Sarkar<br>
+			 IEEE Workshop on Applied Imagery and Pattern Recognition, 2018<br>
 		 </li>
 
 		 <li>
-		 <a href="https://link.springer.com/chapter/10.1007/978-3-319-98131-4_11">On the Inherent Explainability of Pattern Theory-based Video Event Interpretations</a>.<br>
-		 Sathyanarayanan Aakur, Fillipe de Souza, Sudeep Sarkar<br>
-		 Explainable and Interpretable Models in Computer Vision and Machine Learning in the Springer Series on Challenges in Machine Learning, 2018<br>
+			 <a href="https://link.springer.com/chapter/10.1007/978-3-319-98131-4_11">On the Inherent Explainability of Pattern Theory-based Video Event Interpretations</a>.<br>
+			 Sathyanarayanan Aakur, Fillipe de Souza, Sudeep Sarkar<br>
+			 Explainable and Interpretable Models in Computer Vision and Machine Learning in the Springer Series on Challenges in Machine Learning, 2018<br>
 		 </li>
 
 		 <li>
-		 <a href="https://aaai.org/ocs/index.php/WS/AAAIW18/paper/view/16704">An Inherently Explainable Model for Video Activity Interpretation</a>.<br>
-		 Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
-		 AAAI Workshop On Reasoning and Learning for Human-Machine Dialogues (DEEP-DIAL18), 2018.<br>
+			 <a href="https://aaai.org/ocs/index.php/WS/AAAIW18/paper/view/16704">An Inherently Explainable Model for Video Activity Interpretation</a>.<br>
+			 Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
+			 AAAI Workshop On Reasoning and Learning for Human-Machine Dialogues (DEEP-DIAL18), 2018.<br>
 		 </li>
 	</ul>
 	</section>
@@ -186,14 +187,14 @@
 	<ul>
 
 		 <li>
-		 <a href="https://saakur.github.io/files/Saakur_CRV17.pdf">Towards a Knowledge-based approach for Generating Video Descriptions</a>.<br>
-		 Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
-		 IEEE Conference on Computer and Robot Vision (CRV), 2017.<br>
+			 <a href="https://saakur.github.io/files/Saakur_CRV17.pdf">Towards a Knowledge-based approach for Generating Video Descriptions</a>.<br>
+			 Sathyanarayanan Aakur, Fillipe DM de Souza, Sudeep Sarkar<br>
+			 IEEE Conference on Computer and Robot Vision (CRV), 2017.<br>
 		 </li>
 		 <li>
-		 <a href="#">Real Time Data Acquisition System for Production Report Generation</a>.<br>
-		 Sathyanarayanan Aakur, Mithun Singh<br>
-		 International Conference on Computational Intelligence and Advanced Manufacturing Research (ICCIAMR'13), 2013<br>
+			 <a href="#">Real Time Data Acquisition System for Production Report Generation</a>.<br>
+			 Sathyanarayanan Aakur, Mithun Singh<br>
+			 International Conference on Computational Intelligence and Advanced Manufacturing Research (ICCIAMR'13), 2013<br>
 		 </li>
 		 <!-- <li>
 		 <a href="#">Title</a>.<br>
