--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+
+  <dt>Fall'21</dt>
+  <dd>
+    One paper on using building an active vision system for action localization with embodied agents is accepted at WACV 2022! Congrats to my student Shubham on his first paper!
+  </dd>
+	
   <dt>Fall'21</dt>
   <dd>
     One paper on using transformers for metagenome analysis accepted at the ICDM 2021 Workshops! Preprint coming soon!
@@ -107,11 +113,12 @@ Email: saakurn -at- okstate.edu <br>
   <dd>
     Awarded NSF Medium Proposal for Self-Supervised Event Understanding in Streaming Videos! It is a collaborative effort with <a href="https://www.cse.usf.edu/~sarkar/SudeepSarkar/About_Me.html"> Dr. Sudeep Sarkar (USF)</a> and <a href="https://ani.stat.fsu.edu/~anuj/"> Dr. Anuj Srivastava (FSU)</a>. More details to follow!
   </dd>
+
+ <!--   
   <dt>Summer'20</dt>
   <dd>
     Named Outstanding Reviewer at CVPR 2020!
   </dd>
- <!--   
 	<dt>Summer'20</dt>
   <dd>
     Invited as reviewer for NeurIPS 2020, WACV 2021, ACCV 2020, ICPR 2020!
