--- a/pubs.html
+++ b/pubs.html
@@ -58,11 +58,20 @@
 <!-- 2020 -->
 <section>
 	<h2 style="text-align: center">2021</h2>
+	<ul>	
+		<li>
+			<a href="#">Towards Active Vision for Action Localization with Reactive Control and Predictive Learning</a>. <br> 
+			Shubham Trehan, Sathyanarayanan Aakur<br>
+			IEEE/CVF Winter Conference on Applications of Computer Vision (WACV-2022) <a href="#">[Preprint coming soon!]</a>
+		</li>
+	</ul>
+	<h2 style="text-align: center">2021</h2>
 	<ul>
 		<li>
 			<a href="#">Metagenome2Vec: Building Contextualized Representations for Scalable Metagenome Analysis</a>. <br> 
 			Sathyanarayanan Aakur, Sai Narayanan, Vineela Indla, Vennela Indla, Arunkumar Bagavathi, Akhilesh Ramachandran, and Vishalini Laguduva Ramnath <br>
 			International Conference on Data Mining Workshops (ICDMW-2021) <a href="#">[Preprint coming soon!]</a>
+		</li>
 		<li>
 		 	<a href="https://arxiv.org/abs/2107.09883">MG-NET: Leveraging Pseudo-Imaging for Multi-Modal Metagenome Analysis</a>.<br>
 		 	Sathyanarayanan N. Aakur, Vineela Indla, Arunkumar Bagavathi, Sai Narayanan, Akhilesh Ramachandran, Vishalini Laguduva Ramnath <br>
