--- a/pubs.html
+++ b/pubs.html
@@ -55,7 +55,7 @@
 <!-- My Google Scholar <a href="https://scholar.google.com/citations?user=ALuKL5oAAAAJ&hl=en">profile</a/>. -->
 </section>
 
-<!-- 2020 -->
+<!-- 2022 -->
 	<section>
 	<h2 style="text-align: center">2022</h2>
 	<ul>	
@@ -64,11 +64,17 @@
 			Shubham Trehan, Sathyanarayanan Aakur<br>
 			IEEE/CVF Winter Conference on Applications of Computer Vision (WACV-2022) <a href="#">[Preprint coming soon!]</a>
 		</li>
+
 	</ul>
 	</section>
 	<section>
 	<h2 style="text-align: center">2021</h2>
 	<ul>
+		<li>
+			<a href="#"> Self-supervised Event Segmentation. <br>
+			Ramy Mounir, Sathyanarayanan Aakur, Sudeep Sarkar <br> 
+			Book Chapter in <i> Advanced Methods and Deep Learning in Computer Vision </i>, Elsevier Series on Computer Vision and Pattern Recognition. 
+		</li>
 		<li>
 			<a href="#">Metagenome2Vec: Building Contextualized Representations for Scalable Metagenome Analysis</a>. <br> 
 			Sathyanarayanan Aakur, Sai Narayanan, Vineela Indla, Vennela Indla, Arunkumar Bagavathi, Akhilesh Ramachandran, and Vishalini Laguduva Ramnath <br>
