--- a/pubs.html
+++ b/pubs.html
@@ -65,7 +65,7 @@
 			IEEE/CVF Winter Conference on Applications of Computer Vision (WACV-2022) <a href="#">[Preprint coming soon!]</a>
 		</li>
 		<li>
-			<a href="#"> Self-supervised Event Segmentation. <br>
+			<a href="https://www.elsevier.com/books/advanced-methods-and-deep-learning-in-computer-vision/davies/978-0-12-822109-9"> Self-supervised Event Segmentation.</a> <br>
 			Ramy Mounir, Sathyanarayanan Aakur, Sudeep Sarkar <br> 
 			Book Chapter in <i> Advanced Methods and Deep Learning in Computer Vision </i>, Elsevier Series on Computer Vision and Pattern Recognition. 
 		</li>
