--- a/pubs.html
+++ b/pubs.html
@@ -60,9 +60,9 @@
 	<h2 style="text-align: center">2022</h2>
 	<ul>	
 		<li>
-			<a href="#">Towards Active Vision for Action Localization with Reactive Control and Predictive Learning</a>. <br> 
+			<a href="https://arxiv.org/abs/2111.05448">Towards Active Vision for Action Localization with Reactive Control and Predictive Learning</a>. <br> 
 			Shubham Trehan, Sathyanarayanan Aakur<br>
-			IEEE/CVF Winter Conference on Applications of Computer Vision (WACV-2022) <a href="#">[Preprint coming soon!]</a>
+			IEEE/CVF Winter Conference on Applications of Computer Vision (WACV-2022) <a href="https://arxiv.org/abs/2111.05448">[Preprint]</a>
 		</li>
 		<li>
 			<a href="https://www.elsevier.com/books/advanced-methods-and-deep-learning-in-computer-vision/davies/978-0-12-822109-9"> Self-supervised Event Segmentation.</a> <br>
