--- a/group.html
+++ b/group.html
@@ -89,15 +89,27 @@
       (Fall 2020 - Present)
     </p>
   </div>  
+
   <div class="person">
     <img src="./files/blank_w.jpg" alt="thumb" />
     <p>
-      <a href="#">Makenzie Terrell</a>
+      <a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>
       <br />
-      B.S. (CS) Student <br/>
-      (Fall 2020 - Present)
+      M.S. (CS) Student <br/>
+      (Summer 2021 - Present)
     </p>
   </div>  
+
+ <div class="person">
+    <img src="./files/blank_w.jpg" alt="thumb" />
+    <p>
+      <a href="#">Shengfang Ma</a>
+      <br />
+      M.S. (CS) Student <br/>
+      (Fall 2021 - Present)
+    </p>
+  </div>  
+	
   <div class="person">
     <img src="./files/blank.jpeg" alt="thumb" />
     <p>
@@ -107,6 +119,7 @@
       (Fall 2020 - Present)
     </p>
   </div>  
+	
 </div>
 
 </section>
@@ -128,6 +141,16 @@
     </p>
   </div>
 </div>
+	
+  <div class="person">
+    <img src="./files/blank_w.jpg" alt="thumb" />
+    <p>
+      <a href="#">Makenzie Terrell</a>
+      <br />
+      B.S. (CS) Student <br/>
+      (Fall 2020 - Fall 2021)
+    </p>
+  </div>  
 </section>
 
 <section>
