--- a/pubs.html
+++ b/pubs.html
@@ -75,9 +75,9 @@
 	<h2 style="text-align: center">2021</h2>
 	<ul>
 		<li>
-			<a href="#">Metagenome2Vec: Building Contextualized Representations for Scalable Metagenome Analysis</a>. <br> 
+			<a href="https://arxiv.org/abs/2111.08001">Metagenome2Vec: Building Contextualized Representations for Scalable Metagenome Analysis</a>. <br> 
 			Sathyanarayanan Aakur, Sai Narayanan, Vineela Indla, Vennela Indla, Arunkumar Bagavathi, Akhilesh Ramachandran, and Vishalini Laguduva Ramnath <br>
-			International Conference on Data Mining Workshops (ICDMW-2021) <a href="#">[Preprint coming soon!]</a>
+			International Conference on Data Mining Workshops (ICDMW-2021) <a href="https://arxiv.org/abs/2111.08001">[Preprint]</a>
 		</li>
 		<li>
 		 	<a href="https://arxiv.org/abs/2107.09883">MG-NET: Leveraging Pseudo-Imaging for Multi-Modal Metagenome Analysis</a>.<br>
