--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@ This entails developing approaches that do things such as:
 <a name="teaching"></a>
 <h2 style="text-align: center">Teaching</h2>
 <ul>
- <li class="packed">Fall 2020: <a href="http://catalog.okstate.edu/search/?P=CS%205783">CS 4783/5783 Machine Learning</a></li>
- <li class="packed">Spring 2020, 2021: <a href="http://catalog.okstate.edu/search/?P=CS%205323">CS 5323 Design and Implementation of Operating Systems II</a>.</li>
+ <li class="packed">Fall 2020, 2021: <a href="http://catalog.okstate.edu/search/?P=CS%205783">CS 4783/5783 Machine Learning</a></li>
+ <li class="packed">Spring 2020, 2021, 2022: <a href="http://catalog.okstate.edu/search/?P=CS%205323">CS 5323 Design and Implementation of Operating Systems II</a>.</li>
  <li class="packed">Summer 2019: <a href="#">COP 2512: IT Programming Fundamentals</a>. University of South Florida (USF) </li>
  <li class="packed">Spring 2019: Co-taught <a href="#">CAP 6415: Computer Vision</a>. Primary Instructor: <a href="https://www.usf.edu/engineering/cse/people/sarkar-sudeep.aspx"> Dr. Sudeep Sarkar. </a> <a href="http://cse.usf.edu"> </a> (USF) </li>
  <li class="packed">Summer 2016: <a href="#">COP 2512: IT Programming Fundamentals</a>. <a href="http://cse.usf.edu"> </a> (USF) </li>
