--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@ Email: saakurn -at- okstate.edu <br>
   <dd>
     One paper on using building an active vision system for action localization with embodied agents is accepted at WACV 2022! Congrats to my student Shubham on his first paper!
   </dd>
+
+  <dt>Fall'21</dt>
+  <dd>
+    Book chapter with Ramy Mounir and Dr. Sudeep Sarkar on event understanding to appear in Elsevier Series on Computer Vision and Pattern Recognition!
+  </dd>
 	
   <dt>Fall'21</dt>
   <dd>
