--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
-
+  <dt>Spring'22</dt>
+  <dd>
+    One paper on open world action recognition in egocentric videos accepted to Pattern Recognition Letters! Congrats to my student Sanjoy on his second paper!
+  </dd>
+	
   <dt>Fall'21</dt>
   <dd>
     One paper on using building an active vision system for action localization with embodied agents is accepted at WACV 2022! Congrats to my student Shubham on his first paper!
