--- a/pubs.html
+++ b/pubs.html
@@ -37,13 +37,7 @@
  arXiv:2104.14131, 2021. <br>
  	
  </li>
- <li>
- <a href="https://arxiv.org/abs/2009.07470">Knowledge Guided Learning: Towards Open Domain Egocentric Action Recognition with Zero Supervision</a>.<br>
- Sathyanarayanan N. Aakur, Sanjoy Kundu, Nikhil Gunti <br>
- arXiv:2009.07470, 2020. <br>
- 	
- </li>
-
+ 
  <li>
  <a href="https://arxiv.org/abs/1909.03099">Abductive Reasoning as Self-Supervision for Common Sense Question Answering</a>.<br>
  Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
@@ -59,6 +53,11 @@
 	<section>
 	<h2 style="text-align: center">2022</h2>
 	<ul>	
+		<li>
+ 		<a href="https://arxiv.org/abs/2009.07470">Knowledge Guided Learning: Towards Open Domain Egocentric Action Recognition with Zero Supervision</a>.<br>
+ 		Sathyanarayanan N. Aakur, Sanjoy Kundu, Nikhil Gunti <br>
+ 		Pattern Recognition Letters, 2022 <br>
+		 </li>
 		<li>
 			<a href="https://arxiv.org/abs/2111.05448">Towards Active Vision for Action Localization with Reactive Control and Predictive Learning</a>. <br> 
 			Shubham Trehan, Sathyanarayanan Aakur<br>
