--- a/group.html
+++ b/group.html
@@ -80,13 +80,22 @@
     </p>
   </div>
 
-  <div class="person">
-    <img src="./files/blank_w.jpg" alt="thumb" />
+   <div class="person">
+    <img src="./files/GideonAdele.jpg" alt="thumb" />
     <p>
-      <a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>
+      <a href="#">Gideon Adele</a>
       <br />
-      M.S. (CS) Student <br/>
-      (Fall 2020 - Present)
+      Ph.D. Student <br/>
+      (Spring 2022 - Present)
+    </p>
+  </div>
+  <div class="person">
+    <img src="./files/blank.jpg" alt="thumb" />
+    <p>
+      <a href="#">Devyn Hubbard</a>
+      <br />
+      B.S. (CS) Student <br/>
+      (Spring 2022 - Present)
     </p>
   </div>  
 
@@ -96,7 +105,7 @@
       <a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>
       <br />
       M.S. (CS) Student <br/>
-      (Summer 2021 - Present)
+      (Fall 2021 - Present)
     </p>
   </div>  
 
@@ -151,6 +160,15 @@
       (Fall 2020 - Fall 2021)
     </p>
   </div>  
+<div class="person">
+    <img src="./files/blank_w.jpg" alt="thumb" />
+    <p>
+      <a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>
+      <br />
+      M.S. (CS) Student <br/>
+      (Fall 2020 - Present)
+    </p>
+  </div>
 </section>
 
 <section>
