--- a/group.html
+++ b/group.html
@@ -100,7 +100,7 @@
   </div>  
 
   <div class="person">
-    <img src="./files/blank_w.jpg" alt="thumb" />
+    <img src="./files/blank.jpg" alt="thumb" />
     <p>
       <a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>
       <br />
