--- a/group.html
+++ b/group.html
@@ -166,7 +166,8 @@
       <a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>
       <br />
       M.S. (CS) Student <br/>
-      (Fall 2020 - Present)
+      (Fall 2020 - Fall 2021) <br/>
+      First Job: SDE, Amazon.
     </p>
   </div>
 </section>
