--- a/group.html
+++ b/group.html
@@ -90,7 +90,7 @@
     </p>
   </div>
   <div class="person">
-    <img src="./files/blank.jpg" alt="thumb" />
+    <img src="./files/blank.jpeg" alt="thumb" />
     <p>
       <a href="#">Devyn Hubbard</a>
       <br />
@@ -100,7 +100,7 @@
   </div>  
 
   <div class="person">
-    <img src="./files/blank.jpg" alt="thumb" />
+    <img src="./files/blank.jpeg" alt="thumb" />
     <p>
       <a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>
       <br />
@@ -149,7 +149,6 @@
       First Job: Data Scientist, Concat Systems.
     </p>
   </div>
-</div>
 	
   <div class="person">
     <img src="./files/blank_w.jpg" alt="thumb" />
@@ -170,6 +169,7 @@
       First Job: SDE, Amazon.
     </p>
   </div>
+</div>
 </section>
 
 <section>
