--- a/index.html
+++ b/index.html
@@ -81,10 +81,7 @@ Email: saakurn -at- okstate.edu <br>
   </dd>	
   <dt>Spring'21</dt>
   <dd>
-    I will be an Area Chair for <a href="http://cvpr2022.thecvf.com/">CVPR 2022</a> in New Orleans!!
-  </dd>
-  <dd>
-    I will be an Area Chair for <a href="https://2021.acmmm.org/">ACM Multimedia 2021</a>!
+    I will be an Area Chair for <a href="http://cvpr2022.thecvf.com/">CVPR 2022</a> and <a href="https://2021.acmmm.org/">ACM Multimedia 2021</a>!
   </dd>
   <dt>Spring'21</dt>
   <dd>
@@ -115,9 +112,9 @@ Email: saakurn -at- okstate.edu <br>
   <dd>
     Invited as reviewer for ICLR 2021, AAAI 2021.
   </dd>
+  -->
 	<dt>Summer'20</dt>
   <dd>
--->
     One paper accepted at ECCV 2020 on Self-supervised Action Localization with Continual Predictive Learning! More details to follow!
   </dd>
   <dt>Summer'20</dt>
