--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Spring'22</dt>
   <dd>
+    One paper on self-distillation for commonsense question answering accepted to ICPR 2022! Congrats to my student Priya on her first paper!
+  </dd>
+  <dt>Spring'22</dt>
+  <dd>
     One paper on open world action recognition in egocentric videos accepted to Pattern Recognition Letters! Congrats to my student Sanjoy on his second paper!
   </dd>
 	
@@ -112,11 +116,12 @@ Email: saakurn -at- okstate.edu <br>
   <dd>
     Invited as reviewer for ICLR 2021, AAAI 2021.
   </dd>
-  -->
+  
 	<dt>Summer'20</dt>
   <dd>
     One paper accepted at ECCV 2020 on Self-supervised Action Localization with Continual Predictive Learning! More details to follow!
   </dd>
+-->
   <dt>Summer'20</dt>
   <dd>
     Awarded NSF Medium Proposal for Self-Supervised Event Understanding in Streaming Videos! It is a collaborative effort with <a href="https://www.cse.usf.edu/~sarkar/SudeepSarkar/About_Me.html"> Dr. Sudeep Sarkar (USF)</a> and <a href="https://ani.stat.fsu.edu/~anuj/"> Dr. Anuj Srivastava (FSU)</a>. More details to follow!
