--- a/pubs.html
+++ b/pubs.html
@@ -53,6 +53,11 @@
 	<section>
 	<h2 style="text-align: center">2022</h2>
 	<ul>	
+		<li> 
+		<a href="#">ISD-QA: Iterative Distillation of Commonsense Knowledge from General Language Models for Unsupervised Question Answering</a><br>
+		Sathyanarayanan N. Aakur, Priyadharsini Ramamurthy <br>
+		International Conference on Pattern Recognition (ICPR-2022) <a href="#"> [Preprint Coming Soon] </a>
+		</li>
 		<li>
  		<a href="https://arxiv.org/abs/2009.07470">Knowledge Guided Learning: Towards Open Domain Egocentric Action Recognition with Zero Supervision</a>.<br>
  		Sathyanarayanan N. Aakur, Sanjoy Kundu, Nikhil Gunti <br>
