--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Spring'22</dt>
   <dd>
+    Received the prestigious NSF CAREER award to pursue research on multi-modal event udnerstanding!
+  </dd>
+  <dt>Spring'22</dt>
+  <dd>
     One paper on self-distillation for commonsense question answering accepted to ICPR 2022! Congrats to my student Priya on her first paper!
   </dd>
   <dt>Spring'22</dt>
