--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Email: saakurn -at- okstate.edu <br>
 <dl class="dl-horizontal">
   <dt>Spring'22</dt>
   <dd>
-    Received the prestigious NSF CAREER award to pursue research on multi-modal event udnerstanding!
+    Received the prestigious <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2143150&HistoricalAwards=false">NSF CAREER award</a> to pursue research on multi-modal event udnerstanding!
   </dd>
   <dt>Spring'22</dt>
   <dd>
