--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@ Email: saakurn -at- okstate.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+  <dt>Summer'22</dt>
+  <dd>
+    Two papers accepted at ECCV 2022! 
+  </dd>
   <dt>Spring'22</dt>
   <dd>
-    Received the prestigious <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2143150&HistoricalAwards=false">NSF CAREER award</a> to pursue research on multi-modal event udnerstanding!
+    Received the prestigious <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2143150&HistoricalAwards=false">NSF CAREER award</a> to pursue research on multi-modal event understanding!
   </dd>
   <dt>Spring'22</dt>
   <dd>
