--- a/pubs.html
+++ b/pubs.html
@@ -31,13 +31,7 @@
 <section>
 <h2 style="text-align: center">Latest Preprints</h2>
 <ul>
-<li>
- <a href="https://arxiv.org/abs/2104.14131">Learning Actor-centered Representations for Action Localization in Streaming Videos using Predictive Learning</a>.<br>
- Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
- arXiv:2104.14131, 2021. <br>
- 	
- </li>
- 
+
  <li>
  <a href="https://arxiv.org/abs/1909.03099">Abductive Reasoning as Self-Supervision for Common Sense Question Answering</a>.<br>
  Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
@@ -53,6 +47,18 @@
 	<section>
 	<h2 style="text-align: center">2022</h2>
 	<ul>	
+		<li>
+		 <a href="https://arxiv.org/abs/2104.14131">Actor-centered Representations for Action Localization in Streaming Videos</a>.<br>
+		 Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
+		 European Conference on Computer Vision (ECCV) 2022. <br>
+
+		 </li>
+		<li>
+		 <a href="#">Time-Series Analysis of Video Graphs Using Joint Kalman Smoothing and Registration</a>.<br>
+		 Aditi Bal Basu, Ramy Mounir, Sathyanarayanan N. Aakur, Anuj Srivastava, Sudeep Sarkar <br>
+		 European Conference on Computer Vision (ECCV) 2022. <a href="#"> [Preprint Coming Soon] </a> <br>
+
+		 </li>
 		<li> 
 		<a href="#">ISD-QA: Iterative Distillation of Commonsense Knowledge from General Language Models for Unsupervised Question Answering</a><br>
 		Sathyanarayanan N. Aakur, Priyadharsini Ramamurthy <br>
@@ -124,7 +130,7 @@
 		<li>
 			<a href="https://arxiv.org/abs/2003.12185">Action Localization through Continual Predictive Learning</a>.<br>
 			 Sathyanarayanan N. Aakur, Sudeep Sarkar <br>
-			 European Conference on Computer Vision (ECCV), 2020. Accepted, to appear. <a href="https://saakur.github.io/Projects/ActionLocalization/">[Project Page]</a><br>
+			 European Conference on Computer Vision (ECCV), 2020. <a href="https://saakur.github.io/Projects/ActionLocalization/">[Project Page]</a><br>
 		 </li>
 
 		<li>
